objects/QIDC__OK_RelationsParentIdsCache_ims__c.object
<CustomObject>
    <description>Used for caching Onekey IDs of entity records when DML limits are crossed in Relations caching process</description>
    <fields>
        <fullName>QIDC__Entity_Type_ims__c</fullName>
        <description>To store the entity type of Onekey record for which Relations has to be processed later.</description>
        <label>Entity Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__ISO_Country_Code_ims__c</fullName>
        <description>ISO country code of the Onekey entity record for which relations will be processed later</description>
        <label>ISO Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__No_of_Activity_Relations_ims__c</fullName>
        <description>No of relations record available in Onekey for this activity record.</description>
        <label>No of Activity Relations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QIDC__No_of_Individual_Relations_ims__c</fullName>
        <description>No of relations available in Onekey for this Individual record</description>
        <label>No of Individual Relations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QIDC__No_of_Workplace_Relations_ims__c</fullName>
        <description>No of relations available in Onekey for this Workplace record</description>
        <label>No of Workplace Relations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QIDC__Total_No_of_Relations_ims__c</fullName>
        <description>Total no of relations</description>
        <label>Total No of Relations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OneKey Relations ParentIds Cache</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Entity_Type_ims__c</columns>
        <columns>QIDC__ISO_Country_Code_ims__c</columns>
        <columns>QIDC__No_of_Activity_Relations_ims__c</columns>
        <columns>QIDC__No_of_Individual_Relations_ims__c</columns>
        <columns>QIDC__No_of_Workplace_Relations_ims__c</columns>
        <columns>QIDC__Total_No_of_Relations_ims__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>OneKey ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OneKey Relations ParentIds Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>